unified_tests/pattern_matching/matches_operator_instantiated_generic_pattern/expect/build.text.stderr
lib.copp:6:26: error: match patterns must not include type arguments
      return value matches Box[int64]
                           ^
